# took-ai

./: Dockerfile  README.md  backend_server.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug.md  Chore.md  Feature-Request.md  Refactoring.md
ex/: agent_service.py  server.py  test.py
src/took_ai/: crew.py  main.py
