[project]
name = "took_ai"
version = "0.1.0"
description = "took-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
took_ai = "took_ai.main:run"
run_crew = "took_ai.main:run"
train = "took_ai.main:train"
replay = "took_ai.main:replay"
test = "took_ai.main:test"
run_with_trigger = "took_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
